--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               <ol class="app-document-list govuk-!-margin-bottom-6">
     <li class="app-document-list__item">
       <h2 class="app-document-list__item-title">
-        <a class="govuk-link" href="/digital-land-design-history/">The digital land design history</a>
+        <a class="govuk-link" href="/digital-land-design-history/">Planning Data Service a design history</a>
       </h2>
       <p class="app-document-list__item-description">An introduction to the digital land design history.</p>
       <ul class="app-document-list__item-metadata">
