--- a/sitemap.html
+++ b/sitemap.html
@@ -73,7 +73,7 @@
   </header>
 
   <div class="app-article__body">    <div class="app-prose">  <h2 class="govuk-heading-m govuk-!-margin-bottom-1">
-    <a href="/digital-land-design-history/">The digital land design history</a>
+    <a href="/digital-land-design-history/">Planning Data Service a design history</a>
   </h2>
 <p class="govuk-body">An introduction to the digital land design history.</p>  
 </div>
