--- a/brownfield-land-validator/index.html
+++ b/brownfield-land-validator/index.html
@@ -83,6 +83,8 @@
       <div class="app-prose"><p>There was a lot of inconsistencies with the data we were collecting from LPAs. We wanted to see whether providing feedback would help users.</p>
 <p>In this first iteration we based the feedback on very strict validation. Unsurprisingly it didn’t test well.</p>
 <figure><img src="/assets/images/uploads/brownfield-sites-validator.herokuapp.com_.png" alt="Homepage of the check your brownfield land tool"><figcaption>Homepage</figcaption></figure>
+<figure><img src="/assets/images/uploads/brownfield-sites-validator.herokuapp.com_upload.png" alt="Screen to upload the CSV file"><figcaption>Upload your brownfield land register</figcaption></figure>
+<figure><img src="/assets/images/uploads/playback.png" alt="Playback screen"><figcaption>Check the data screen</figcaption></figure>
 </div>
 
 
