--- a/brownfield-land-validator/index.html
+++ b/brownfield-land-validator/index.html
@@ -80,11 +80,9 @@
 
   <div class="app-article__body">  <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <div class="app-prose"><h2 id="what-problem-did-we-want-to-solve%3F" tabindex="-1"><a class="header-anchor" href="#what-problem-did-we-want-to-solve%3F">What problem did we want to solve?</a></h2>
-<p>There are a lot of inconsistencies with the data we were collecting from LPAs.</p>
-<h2 id="what-did-we-do%3F" tabindex="-1"><a class="header-anchor" href="#what-did-we-do%3F">What did we do?</a></h2>
-<p>We wanted to see whether providing feedback would help users.</p>
-<p>In this first iteration we based the feedback on very strict validation. Unsurprisingly it didn’t test well.</p>
+      <div class="app-prose"><h2 id="what-did-we-do%3F" tabindex="-1"><a class="header-anchor" href="#what-did-we-do%3F">What did we do?</a></h2>
+<p>There are a lot of inconsistencies with the data we collect from local planning authorities (LPAs).</p>
+<p>So we wanted to see whether providing feedback about their data would help those users.</p>
 <figure><img src="/assets/images/uploads/brownfield-sites-validator.herokuapp.com_.png" alt="Homepage of the check your brownfield land tool"><figcaption>Homepage</figcaption></figure>
 <figure><img src="/assets/images/uploads/brownfield-sites-validator.herokuapp.com_upload.png" alt="Screen to upload the CSV file"><figcaption>Upload your brownfield land register</figcaption></figure>
 <figure><img src="/assets/images/uploads/playback.png" alt="Playback screen"><figcaption>Check the data screen</figcaption></figure>
