deploy: fe489ba9f3ee1a3f56e94671a257b120c37b9a58

--- a/brownfield-land-validator/index.html
+++ b/brownfield-land-validator/index.html
@@ -83,6 +83,12 @@
       <div class="app-prose"><h2 id="what-did-we-do%3F" tabindex="-1"><a class="header-anchor" href="#what-did-we-do%3F">What did we do?</a></h2>
 <p>There are a lot of inconsistencies with the data we collect from local planning authorities (LPAs).</p>
 <p>So we wanted to see whether providing feedback about their data would help those users.</p>
+<h2 id="what-did-we-learn%3F" tabindex="-1"><a class="header-anchor" href="#what-did-we-learn%3F">What did we learn?</a></h2>
+<p>We learned:</p>
+<ul>
+<li>Users did not engage with strict validation errors when their data was checked against the standard.</li>
+<li>Users respond well when their data is ‘played back’ to them. Showing their data and presenting facts and information we gleaned from it, resulted in a better more proactive reponse from users.</li>
+</ul>
 <figure><img src="/assets/images/uploads/brownfield-sites-validator.herokuapp.com_.png" alt="Homepage of the check your brownfield land tool"><figcaption>Homepage</figcaption></figure>
 <figure><img src="/assets/images/uploads/brownfield-sites-validator.herokuapp.com_upload.png" alt="Screen to upload the CSV file"><figcaption>Upload your brownfield land register</figcaption></figure>
 <figure><img src="/assets/images/uploads/playback.png" alt="Playback screen"><figcaption>Check the data screen</figcaption></figure>
