--- a/brownfield-land-validator/index.html
+++ b/brownfield-land-validator/index.html
@@ -84,11 +84,10 @@
 <p>There are a lot of inconsistencies with the data we collect from local planning authorities (LPAs).</p>
 <p>So we wanted to see whether providing feedback about their data would help those users.</p>
 <h2 id="what-did-we-learn%3F" tabindex="-1"><a class="header-anchor" href="#what-did-we-learn%3F">What did we learn?</a></h2>
-<p>We learned:</p>
-<ul>
-<li>Users did not engage with strict validation errors when their data was checked against the standard.</li>
-<li>Users respond well when their data is ‘played back’ to them. Showing their data and presenting facts and information we gleaned from it, resulted in a better more proactive reponse from users.</li>
-</ul>
+<h3 id="users-did-not-engage-with-strict-validation-errors" tabindex="-1"><a class="header-anchor" href="#users-did-not-engage-with-strict-validation-errors">Users did not engage with strict validation errors</a></h3>
+<p>Initial versions of this prototype validated the the user’s data against the standard and then presented the user with a report of all the errors and omissions. Users did not respond well to this type of feedback, especially users who were not data experts.</p>
+<h3 id="users-respond-well-when-their-data-is-%E2%80%98played-back%E2%80%99-to-them." tabindex="-1"><a class="header-anchor" href="#users-respond-well-when-their-data-is-%E2%80%98played-back%E2%80%99-to-them.">Users respond well when their data is ‘played back’ to them.</a></h3>
+<p>Showing users their data in an easily digestible way prompted a much more positive response. Presenting facts and information that we had extrapolated from their date, triggered users to want to investigate omissions and inaccuracies.</p>
 <figure><img src="/assets/images/uploads/brownfield-sites-validator.herokuapp.com_.png" alt="Homepage of the check your brownfield land tool"><figcaption>Homepage</figcaption></figure>
 <figure><img src="/assets/images/uploads/brownfield-sites-validator.herokuapp.com_upload.png" alt="Screen to upload the CSV file"><figcaption>Upload your brownfield land register</figcaption></figure>
 <figure><img src="/assets/images/uploads/playback.png" alt="Playback screen"><figcaption>Check the data screen</figcaption></figure>
