deploy: 615d1dea409ed6ae3a91c29e8a31c3c12c95d5da

--- a/brownfield-land-validator/index.html
+++ b/brownfield-land-validator/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="govuk-template no-js">
   <head>
     <meta charset="utf-8">
-    <title>Brownfield land validator - Planning Data - GOV.UK</title>
+    <title>Check your brownfield land data - Planning Data - GOV.UK</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta name="theme-color" content="#0b0c0c"> 
     
@@ -16,8 +16,8 @@
       <link rel="apple-touch-icon" href="/assets/images/govuk-apple-touch-icon.png">
 
 <link href="/assets/stylesheets/application.css" media="all" rel="stylesheet" type="text/css">
-<meta property="og:title" content="Brownfield land validator">
-<meta property="og:description" name="description" content="A validator tool for the Brownfield Land data standard"><meta name="robots" content="noindex nofollow">
+<meta property="og:title" content="Check your brownfield land data">
+<meta property="og:description" name="description" content="A tool for people to check their the Brownfield Land data compared to the data standard"><meta name="robots" content="noindex nofollow">
 
     
   </head>
@@ -68,14 +68,14 @@
   <div class="govuk-breadcrumbs govuk-!-display-none-print">
   <ol class="govuk-breadcrumbs__list">    <li class="govuk-breadcrumbs__list-item">
       <a class="govuk-breadcrumbs__link" href="/">A design history for the Planning Data Service</a>
-    </li>    <li class="govuk-breadcrumbs__list-item" aria-current="page">Brownfield land validator</li>
+    </li>    <li class="govuk-breadcrumbs__list-item" aria-current="page">Check your brownfield land data</li>
   </ol>
 </div>
 
         <main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
 <article class="app-article">
   <header class="app-article__header govuk-!-width-two-thirds">
-    <h1 class="app-article__title govuk-heading-xl">Brownfield land validator</h1>
+    <h1 class="app-article__title govuk-heading-xl">Check your brownfield land data</h1>
   </header>
 
   <div class="app-article__body">  <div class="govuk-grid-row">
@@ -85,7 +85,7 @@
 <p>So we wanted to see whether providing feedback about their data would help those users.</p>
 <h2 id="what-did-we-learn%3F" tabindex="-1"><a class="header-anchor" href="#what-did-we-learn%3F">What did we learn?</a></h2>
 <h3 id="users-did-not-engage-with-strict-validation-errors" tabindex="-1"><a class="header-anchor" href="#users-did-not-engage-with-strict-validation-errors">Users did not engage with strict validation errors</a></h3>
-<p>Initial versions of this prototype validated the the user’s data against the standard and then presented the user with a report of all the errors and omissions. Users did not respond well to this type of feedback, especially users who were not data experts.</p>
+<p>Initial versions of this prototype <em>validated</em> the the user’s data against the standard and then presented the user with a report of all the errors and omissions. Users did not respond well to this type of feedback, especially users who were not data experts.</p>
 <h3 id="users-respond-well-when-their-data-is-%E2%80%98played-back%E2%80%99-to-them." tabindex="-1"><a class="header-anchor" href="#users-respond-well-when-their-data-is-%E2%80%98played-back%E2%80%99-to-them.">Users respond well when their data is ‘played back’ to them.</a></h3>
 <p>Showing users their data in an easily digestible way prompted a much more positive response. Presenting facts and information that we had extrapolated from their date, triggered users to want to investigate omissions and inaccuracies.</p>
 <figure><img src="/assets/images/uploads/brownfield-sites-validator.herokuapp.com_.png" alt="Homepage of the check your brownfield land tool"><figcaption>Homepage</figcaption></figure>
