--- a/sitemap.html
+++ b/sitemap.html
@@ -77,9 +77,9 @@
   </h2>
 <p class="govuk-body">An introduction to the digital land design history.</p>  
   <h2 class="govuk-heading-m govuk-!-margin-bottom-1">
-    <a href="/brownfield-land-validator/">Brownfield land validator</a>
+    <a href="/brownfield-land-validator/">Check your brownfield land data</a>
   </h2>
-<p class="govuk-body">A validator tool for the Brownfield Land data standard</p>  
+<p class="govuk-body">A tool for people to check their the Brownfield Land data compared to the data standard</p>  
 </div>
 
 
