deploy: 9bc094b800868ad5f8d31203be233a5e90893e5d

--- a/brownfield-land-validator/index.html
+++ b/brownfield-land-validator/index.html
@@ -87,10 +87,10 @@
 <h3 id="users-did-not-engage-with-strict-validation-errors" tabindex="-1"><a class="header-anchor" href="#users-did-not-engage-with-strict-validation-errors">Users did not engage with strict validation errors</a></h3>
 <p>Initial versions of this prototype <em>validated</em> the the user’s data against the standard and then presented the user with a report of all the errors and omissions. Users did not respond well to this type of feedback, especially users who were not data experts.</p>
 <h3 id="users-respond-well-when-their-data-is-%E2%80%98played-back%E2%80%99-to-them." tabindex="-1"><a class="header-anchor" href="#users-respond-well-when-their-data-is-%E2%80%98played-back%E2%80%99-to-them.">Users respond well when their data is ‘played back’ to them.</a></h3>
-<p>Showing users their data in an easily digestible way prompted a much more positive response. Presenting facts and information that we had extrapolated from their date, triggered users to want to investigate omissions and inaccuracies.</p>
+<p>Showing users their data in an easily digestible way prompted a much more positive response. Presenting facts and information that we had extrapolated from their data, triggered users to want to investigate omissions and inaccuracies.</p>
 <figure><img src="/assets/images/uploads/brownfield-sites-validator.herokuapp.com_.png" alt="Homepage of the check your brownfield land tool"><figcaption>Homepage</figcaption></figure>
 <figure><img src="/assets/images/uploads/brownfield-sites-validator.herokuapp.com_upload.png" alt="Screen to upload the CSV file"><figcaption>Upload your brownfield land register</figcaption></figure>
-<figure><img src="/assets/images/uploads/playback.png" alt="Playback screen"><figcaption>Check the data screen</figcaption></figure>
+<figure><img src="/assets/images/uploads/playback.png" alt="Playback screen"><figcaption>Playback of the data</figcaption></figure>
 </div>
 
 
